examples/invalid/invalid_spawn.fg
fn main():
    spawn 42
